# thinknet

./: .gitignore  1  @  AGENTS.md  AUTOMATION.md  CLAUDE.md  Code_Upgrades.md  Dockerfile.fastapi  Dockerfile.frontend  Dockerfile.rust  MIGRATION_GUIDE.md  PHASE1_CHANGELOG.md  PHASE2_PLAN.md  TROUBLESHOOTING_GUIDE.md  deploy_crpd.sh  docker-compose.yml  migration.md  migration_action.md  migration_backend_enhancements.md  migration_frontend_enhancements.md  migration_plan.md  package-lock.json  package.json  setup_pyright.sh
.venv_pyright/: pyvenv.cfg
app_gateway/: fastapi_worker.py  fastapi_worker.py.phase1  fastapi_worker_temp.py  main.py  requirements.txt  validation_methods.py
app_gateway/api/routers/: automation.py  code_upgrade.py  configuration_deployment.py  configuration_templates.py  device_storage.py  file_uploader.py  inventory.py  jsnapy.py  jsnapy_runner.py  jsnapy_tests.py  operations.py  pre_checks.py  proxy.py  restore.py  sidebar_metadata.py  software_images.py  test_redis.py  upgrade.py
app_gateway/core/: config.py
app_gateway/data_access/: __init__.py  backup_reader.py  image_reader.py  template_reader.py  test_reader.py
app_gateway/services/: jsnapy_service.py  jsnapy_service_v2.py  websocket.py
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: mod.rs  navigation.rs  state.rs
backend/src/models/: mod.rs
backend/src/routes/: health.rs  mod.rs  navigation.rs  websocket.rs
backend/src/services/: connection_manager.rs  mod.rs  redis_service.rs  yaml_service.rs
cRPD-Lab/: docker-compose.yml  setup-crpd-lab.sh
cRPD-Lab/configs/: crpd.conf
cRPD-Lab/crpd-images/: README.md
cRPD-Lab/scripts/: load-crpd-image.sh  manage-lab.sh
configs/: crpd.conf
fastapi/: main.py  requirements.txt  ws_client.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/backup/CodeUpgrades_20251202_172454/: CodeUpgradesWrapper.jsx  CodeUpgradesZustand.jsx  useCodeUpgradeStoreBridge.js  useCodeUpgradeWorkflowZustand.js
frontend/py_scripts/utils/: __init__.py  connect_to_hosts.py  utils.py  (+1 more)
frontend/src/: App.jsx  index.css  main.jsx
shared/data/: navigation.yaml
shared/schemas/: navigation.schema.json
(+202 files in other folders)
