[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
# Required to access the TcpListener for axum::serve
tokio-util = { version = "0.7", features = ["io"] }

# Shared state/concurrency
tokio-stream = "0.1" 
# 🛑 REMOVED: futures = "0.3" 

# Unique identifier for connections
uuid = { version = "1.8", features = ["v4", "fast-rng"] } 

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# JSON Schema
jsonschema = "0.17"

# 🚀 REDIS INTEGRATION
redis = { version = "0.23", features = ["tokio-comp"] }

# ✅ KEEP THIS ONE: Provides the necessary 'async-await' features for Redis/Tokio integration.
futures = { version = "0.3", features = ["async-await"] }
